--- a/wp-content/plugins/projectdoom/doom-app/app/app.config.json
+++ b/wp-content/plugins/projectdoom/doom-app/app/app.config.json
@@ -2,7 +2,7 @@
     "general": {
         "Appname": "PRJDM",
         "Version": "0.0.1",
-        "api": "https://wp.bernardus.co.za/wp-json/doom/v1/",
+        "api": "https://staging1.doom.co.za/wp-json/doom/v1/",
         "path": "wp-content/plugins/projectdoom/doom-app/"
     }
 }
